tests/ui/pub/pub-ident-struct-2.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-struct-2.rs:4:5
   |
LL |     pub bar();
   |     ^^^^^^^
   |
help: add `struct` here to parse `bar` as a struct
   |
LL |     pub struct bar();
   |         ++++++

error: aborting due to 1 previous error

