tests/ui/pub/pub-ident-struct-2.rs
// #60115

mod foo {
    pub bar();
    //~^ ERROR missing `struct` for struct definition
}

fn main() {}
